--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 
@@ -118,6 +120,10 @@ img {
 /* Главный раздел */
 
 /* Навигация пользователя */
+
+.main {
+  flex-grow: 1;
+}
 
 .nav-link {
   color: inherit;
