--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,12 +117,26 @@ img {
   cursor: pointer;
 }
 
-/* Главный раздел */
+/* Шапка */
 
-/* Навигация пользователя */
+/* Навигация */
 
-.main {
-  flex-grow: 1;
+.nav {
+  display: flex;
+  width: 1170px;
+  margin: 0 auto;
+}
+
+/* Навигация по сайту */
+
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
+.nav-menu {
+  display: flex;
+  width: 575px;
 }
 
 .nav-link {
@@ -130,10 +144,18 @@ img {
   text-decoration: none;
 }
 
+/* Навигация пользователя */
+
 .nav-phone {
   font-weight: 700;
   color: inherit;
   text-decoration: none;
+}
+
+.nav-user {
+  display: flex;
+  max-width: 431px;
+  margin-left: auto;
 }
 
 .user-link {
@@ -149,7 +171,13 @@ img {
   font-size: 14px;
 }
 
-/* Шапка */
+/* Главный раздел */
+
+.main {
+  flex-grow: 1;
+  width: 1170px;
+  margin: 0 auto;
+}
 
 /* Слайдер */
 
