--- a/styles/styles.css
+++ b/styles/styles.css
@@ -518,6 +518,22 @@ img {
 
 /* Подвал */
 
+.page-footer {
+  width: 1170px;
+  margin: 0 auto;
+}
+
+.page-footer-container {
+  display: flex;
+}
+
+.footer-navigation-menu {
+  display: flex;
+  flex-wrap: wrap;
+  width: 356px;
+  margin: 0 auto;
+}
+
 .footer-navigation-link-favorites {
   font-weight: 700;
   font-size: 14px;
@@ -527,6 +543,10 @@ img {
   font-size: 14px;
   color: inherit;
   text-decoration: none;
+}
+
+.page-footer-copyright {
+  width: 193px;
 }
 
 .page-footer-copyright-info {
