--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,13 +54,12 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+.wrapper {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
-  background-color: #feafc3;
+  background-color: #ffffff;
 }
 
 img {
