--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,11 +75,10 @@ html {
 }
 
 img {
-  display: block;
   max-width: 100%;
+  height: auto;
 
   object-fit: cover;
-  object-position: center;
 }
 
 .list-reset {
