--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,6 +143,16 @@ img {
     0 0 0 4px rgba(255, 47, 100, 0.3);
 }
 
+.button-outline {
+  padding: 8px 10px;
+
+  font-size: 14px;
+
+  background-color: rgba(252, 252, 252, 0.3);
+  border-radius: 20px;
+  box-shadow: 0 0 0 2px #fcfcfc;
+}
+
 /* Шапка */
 
 /* Навигация */
