--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,6 +153,31 @@ img {
   box-shadow: 0 0 0 2px #fcfcfc;
 }
 
+.field {
+  width: 100%;
+  height: 48px;
+  padding: 13px 15px;
+
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "Inter", sans-serif;
+  color: #2d3440;
+
+  background-color: #ffffff;
+  border: 1px solid #b9b9b9;
+  border-radius: 4px;
+}
+
+textarea.field {
+  resize: none;
+}
+
+.field::placeholder {
+  color: #b9b9b9;
+
+  opacity: 1;
+}
+
 /* Шапка */
 
 /* Навигация */
