Переносит Основной стиль Разделов на общую обёртку
Это требуется для ограничения контента и его центровки.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,11 @@ html {
   background-color: #fcc850;
 }
 
+.container {
+  width: 1170px;
+  margin: 0 auto;
+}
+
 img {
   max-width: 100%;
   height: auto;
