--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,7 +197,14 @@ textarea.field {
 
 .logo {
   display: block;
+  width: 137px;
+  height: 56px;
   margin-right: 16px;
+}
+
+.logo img {
+  display: block;
+  width: 100%;
 }
 
 .nav-menu {
