--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,9 +221,13 @@ textarea.field {
 
 .nav-link {
   display: block;
+  padding: 6px 13px;
 
   color: inherit;
   text-decoration: none;
+
+  border: 2px solid transparent;
+  border-radius: 30px;
 }
 
 /* Навигация пользователя */
