Реализует Сетку main через grid

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,6 +283,14 @@ textarea.field {
   flex-grow: 1;
 }
 
+.main-index {
+  display: grid;
+  align-items: start;
+
+  grid-template-columns: 1fr;
+  row-gap: 80px;
+}
+
 /* Слайдер */
 
 .slider {
