Реализует Сетку всех Слайдов через grid

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -304,7 +304,14 @@ textarea.field {
 }
 
 .slide {
-  display: flex;
+  display: grid;
+  align-items: center;
+  width: 100px;
+  overflow: hidden;
+
+  gap: 0 10px;
+  grid-template-columns: 100px;
+  justify-items: end;
 }
 
 .slide-active .slide-text {
