--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,6 +336,12 @@ textarea.field {
   opacity: 0.4;
 }
 
+.slide-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .slide-caption {
   font-weight: 900;
   font-size: 36px;
