--- a/styles/styles.css
+++ b/styles/styles.css
@@ -418,10 +418,12 @@ textarea.field {
 
 /* Попробуйте самые популярные вкусы нашего мороженого */
 
+.catalog-page {
+  padding-bottom: 40px;
+}
+
 .catalog-title-common {
   margin-bottom: 56px;
-
-  text-align: center;
 }
 
 .catalog-list {
@@ -800,9 +802,9 @@ textarea.field {
 
 /* Карточки товаров Каталога */
 
-.catalog-page {
+/*.catalog-page {
   margin-bottom: 40px;
-}
+}*/
 
 .catalog-list {
   margin-bottom: 16px;
