--- a/styles/styles.css
+++ b/styles/styles.css
@@ -438,12 +438,7 @@ textarea.field {
 }
 
 .catalog-item {
-  width: 270px;
-  margin-right: 30px;
-}
-
-.catalog-item:nth-child(4n) {
-  margin-right: 0;
+  text-align: center;
 }
 
 .catalog-wrapper {
