--- a/styles/styles.css
+++ b/styles/styles.css
@@ -454,12 +454,16 @@ textarea.field {
 }
 
 .catalog-title {
+  margin: 0;
+
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
 }
 
 .catalog-text {
+  margin: 0;
+
   line-height: 22px;
   color: #565c66;
 }
