--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,12 +483,14 @@ textarea.field {
   background-image: url("../images/backgrounds/about-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .about-wrapper {
   padding: 56px 40px;
 
   background-color: #ffffff;
+  border-radius: 16px;
 }
 
 .about-title {
