--- a/styles/styles.css
+++ b/styles/styles.css
@@ -704,13 +704,12 @@ textarea.field {
 /* Подвал */
 
 .page-footer {
-  width: 1170px;
-  margin: 0 auto;
   padding: 48px 0;
 }
 
 .page-footer-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-navigation-menu {
