--- a/styles/styles.css
+++ b/styles/styles.css
@@ -721,22 +721,34 @@ textarea.field {
   grid-template-columns: 126px 182px;
 }
 
-.footer-navigation-link-favorites {
-  font-weight: 700;
-  font-size: 14px;
-}
-
 .footer-navigation-link {
   font-size: 14px;
   color: inherit;
   text-decoration: none;
 }
 
-.page-footer-copyright {
-  width: 193px;
+.footer-navigation-link-favorites {
+  font-weight: 700;
+}
+
+.page-footer-copyright-logo {
+  display: block;
+  width: 93px;
+  height: 27px;
+  margin-bottom: 14px;
+
+  color: #2d3440;
+}
+
+.page-footer-copyright-logo img {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .page-footer-copyright-info {
+  margin: 0;
+
   font-size: 12px;
   line-height: 16px;
 }
@@ -744,6 +756,8 @@ textarea.field {
 .page-footer-copyright-link {
   color: inherit;
   text-decoration: none;
+
+  border-bottom: 1px solid rgba(46, 52, 64, 0.5);
 }
 
 /* Хлебные крошки Каталога */
