--- a/styles/styles.css
+++ b/styles/styles.css
@@ -764,6 +764,7 @@ textarea.field {
 
 .breadcrumbs-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .breadcrumbs-link {
@@ -771,6 +772,12 @@ textarea.field {
   font-size: 14px;
   color: inherit;
   text-decoration: none;
+
+  border-bottom: 1px solid transparent;
+}
+
+.breadcrumbs-link-current {
+  border-color: currentColor;
 }
 
 /* Фильтр товаров Каталога */
