--- a/styles/styles.css
+++ b/styles/styles.css
@@ -832,19 +832,19 @@ textarea.field {
 
 /* Карточки товаров Каталога */
 
-/*.catalog-page {
-  margin-bottom: 40px;
-}*/
-
-/*.catalog-list {
-  margin-bottom: 16px;
-}*/
-
 .pagination {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
-  padding: 41px 98px;
+  padding: 41px 0;
+
+  grid-template-columns: 180px 1fr 180px;
+}
+
+.pagination::before {
+  content: "";
+
+  width: 100%;
 }
 
 .pagination-button-more {
@@ -852,14 +852,36 @@ textarea.field {
 }
 
 .pagination-container {
-  display: flex;
+  display: grid;
+  justify-content: end;
+
+  gap: 3px;
+  grid-template-columns: 16px minmax(120px, auto) 16px;
 }
 
 .pagination-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .pagination-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 24px;
+  min-height: 24px;
+  padding: 0 2px;
+
+  line-height: 20px;
   color: inherit;
   text-decoration: none;
+
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+.pagination-link-current {
+  background-color: #fcfcfc;
+
+  pointer-events: none;
 }
